@@ -1,3 +1,8 @@
+Fri Apr 24 19:57:59 1998  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* sim-config.h: Discard leading _ from macros.
+	* sim-types.h: Ditto.
+
 Wed Apr 22 14:14:19 1998  Michael Meissner  <meissner@cygnus.com>
 
 	* Make-common.in (CSEARCH): Add -I to intl directories.
